--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<%= link_to 'New post', new_post_path %>
+<h1>Posts</h1>
+<% @posts.each do |post| %>
+  <div>
+    <% if post.image.attached? %>
+      <img src="<%= url_for(post.image) %>" alt="<%= post.caption %>">
+    <% end %>
+    <p><%= post.caption %></p>
+  </div>
+<% end %>
