--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,9 @@
-<%= link_to 'New post', new_post_path %>
+<% if user_signed_in? %>
+  <%= link_to 'New post', new_post_path %>
+<% end %>
+
 <h1>Posts</h1>
+
 <% @posts.each do |post| %>
   <div>
     <% if post.image.attached? %>
