--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,16 @@
 
   <body>
     <div>
-      <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+      <% if user_signed_in? %>
+        <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+      <% else %>
+        <% unless current_page?('/users/sign_up') %>
+          <%= link_to 'Sign up', new_user_registration_path %>
+        <% end %>
+        <% unless current_page?('/users/sign_in') %>
+          <%= link_to 'Sign in', new_user_session_path %>
+        <% end %>
+      <% end %>
     </div>
 
     <p class="notice"><%= notice %></p>
