--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <div>
       <% if user_signed_in? %>
+        <%= link_to current_user.username, user_path(current_user) %>
         <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
       <% else %>
         <% unless current_page?('/users/sign_up') %>
