--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,15 @@
   <body>
     <div>
       <% if user_signed_in? %>
-        <%= link_to current_user.username, user_path(current_user) %>
+        <% unless current_page? user_path(current_user) %>
+          <%= link_to current_user.username, user_path(current_user) %>
+          |
+        <% end %>
         <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+        <% unless current_page? root_path %>
+          |
+          <%= link_to 'Posts', root_path %>
+        <% end %>
       <% else %>
         <% unless current_page?('/users/sign_up') %>
           <%= link_to 'Sign up', new_user_registration_path %>
