--- a/app/views/shared/_post_list.html.erb
+++ b/app/views/shared/_post_list.html.erb
@@ -6,5 +6,14 @@
     <% end %>
     <p><%= post.created_at.strftime '%H:%M %d/%m/%y' %></p>
     <p><%= post.caption %></p>
+
+    <%= link_to 'Comment', new_comment_path(post.id) %>
+
+    <% @comments.select { |x| x.post_id == post.id }.each do |comment| %>
+      <p>
+      <%= comment.user.username %> says
+      <%= comment.content %>
+      </p>
+    <% end %>
   </div>
 <% end %>
